# tributary

./: .gitattributes  .gitignore  .packit.yaml  CHANGELOG.md  CODE_REVIEW_2026-06-09.md  CODE_REVIEW_2026-07-10.md  Cargo.toml  README.md  build.rs
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  fuzz.yml  release.yml
build-aux/arch/: PKGBUILD
build-aux/flatpak/: LICENSE.flatpak-cargo-generator  flatpak-cargo-generator.PROVENANCE  flatpak-cargo-generator.sha256  generate-cargo-sources.sh  generator-requirements.txt  io.github.tributary.Tributary.yml  test-permissions.sh  validate-bundle-compliance.sh  validate-permissions.sh
build-aux/inno/: tributary.iss
build-aux/linux/: test-package-compliance.sh  validate-package-compliance.sh  validate-package-metadata.sh
build-aux/packaging/: forbidden-bundled-components.txt
build-aux/rpm/: tributary.spec
data/: io.github.tributary.Tributary.desktop  io.github.tributary.Tributary.metainfo.xml  tributary.rc
docs/: lastfm-scrobbling.md  playback-history.md  ratings.md  release-component-policy.md  rhythmbox-migration.md  roadmap.md  source-scoped-playlists.md  subsonic-playlist-sync.md  task-remediation-2026-07.md  task.md
docs/architecture/: source-lifecycle.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_dmap.rs
hooks/: pre-commit
locales/: de.yml  en.yml  es.yml  fr.yml  it.yml  ja.yml  ko.yml  nl.yml  pl.yml  pt-BR.yml  ru.yml  zh-CN.yml  zh-TW.yml
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1  macos-package-policy.sh  test-macos-package-policy.sh
src/: discovery.rs  external_file.rs  http_body.rs  http_security.rs  http_test_service.rs  lib.rs  main.rs  panic_reporting.rs  platform_runtime.rs  remote_rating_wire.rs  removable.rs  server_playlist_coordinator.rs  source_lifecycle.rs  source_registry.rs
src/architecture/: backend.rs  error.rs  identity.rs  media.rs  mod.rs  models.rs  server_playlist.rs
src/audio/: airplay_output.rs  cast_http_server.rs  chromecast_output.rs  gstreamer_media.rs  local_output.rs  media_proxy.rs  mod.rs  mpd_output.rs  output.rs  runtime_probe.rs  test_support.rs
src/daap/: backend.rs  client.rs  dmap.rs  lifecycle_tests.rs  mod.rs  session.rs
src/db/: connection.rs  mod.rs
src/db/entities/: lastfm_scrobble.rs  library_root.rs  mod.rs  playlist.rs  playlist_entry.rs  rhythmbox_import_receipt.rs  root_reauthorization_receipt.rs  server_playlist_link.rs  track.rs  unparseable_file.rs
src/db/migration/: m20250101_000001_create_tables.rs  m20250102_000002_create_playlists.rs  m20250103_000003_add_album_artist.rs  m20250104_000004_unique_entry_position.rs  m20250710_000005_create_library_roots.rs  m20260712_000006_playlist_track_fk.rs  m20260714_000007_add_composer.rs  m20260715_000008_create_unparseable_file.rs  m20260715_000008_playlist_entry_match_path.rs  m20260715_000009_create_root_reauthorization_receipts.rs  m20260717_000009_rename_unparseable_file_table.rs  m20260718_000010_add_playback_history.rs  m20260718_000011_migrate_default_history_playlists.rs  m20260719_000012_add_track_rating.rs  m20260719_000013_source_scoped_playlist_entries.rs  m20260719_000014_server_playlist_links.rs  m20260720_000015_playlist_sidebar_revision.rs  m20260720_000016_rhythmbox_import_receipts.rs  m20260720_000017_lastfm_scrobble_queue.rs  m20260721_000018_lastfm_delivery_pause.rs  mod.rs
src/desktop_integration/: mod.rs
src/device/: mod.rs  transfer.rs  usb.rs
src/jellyfin/: api.rs  backend.rs  client.rs  mod.rs
src/lastfm/: authorization.rs  authorization_tests.rs  client.rs  credentials.rs  delivery.rs  lifecycle.rs  mod.rs  playback.rs  playback_coordinator.rs  playback_owner.rs  production.rs  runtime.rs  runtime_delivery_tests.rs  runtime_now_playing_tests.rs  runtime_reauthorization_tests.rs  storage.rs  worker.rs
src/local/: backend.rs  engine.rs  mod.rs  playback_history.rs  playlist_io.rs  playlist_manager.rs  playlist_sidebar.rs  resolver.rs  rhythmbox_import.rs  rhythmbox_migration.rs  rhythmbox_smart_playlist.rs  root_authority.rs  server_playlist_browser.rs  server_playlist_runtime.rs  smart_rules.rs  tag_parser.rs  tag_writer.rs
src/local/playlist_manager/: server_playlist_sync.rs
src/platform/: mod.rs
src/plex/: api.rs  backend.rs  client.rs  mod.rs
src/radio/: adapter.rs  api.rs  client.rs  geo.rs  mod.rs
src/subsonic/: api.rs  backend.rs  client.rs  mod.rs
src/ui/: album_art.rs  browser.rs  context_menu.rs  discovery_handler.rs  dummy_data.rs  header_bar.rs  library_commands.rs  mod.rs  open_files.rs  output_dialogs.rs  output_switch.rs  persistence.rs  playback.rs  playlist_actions.rs  playlist_editor.rs  playlist_projection.rs  preferences.rs  properties_dialog.rs  radio.rs  removable_media.rs  rhythmbox_migration.rs  root_trust.rs  server_dialogs.rs  server_playlist_recovery.rs  server_playlists.rs  sidebar.rs  source_connect.rs  source_navigation.rs  style.css  tracklist.rs  win32_snap.rs  window.rs  window_state.rs
src/ui/objects/: browser_item.rs  mod.rs  source_object.rs  track_object.rs
tests/: packaging_metadata.rs
tests/fixtures/audio/: README.md  silence.flac
