[package]
name = "tributary"
version = "0.4.0"
edition = "2021"
rust-version = "1.80"
description = "A high-performance, Rhythmbox-style media manager with unified local and remote backends"
license = "GPL-3.0-or-later"
repository = "https://github.com/jm2/tributary"
authors = ["Tributary Contributors"]

[dependencies]
# GTK4 / Libadwaita UI
gtk = { version = "0.11", package = "gtk4", features = ["v4_16"] }
adw = { version = "0.9", package = "libadwaita", features = ["v1_6"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait support
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }

# URL handling
url = { version = "2", features = ["serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUIDs
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# Local backend — database (SQLite via SeaORM)
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

# Local backend — audio tag parsing
lofty = "0.22"

# Local backend — filesystem watching
notify = "8"
walkdir = "2"

# Thread bridging (GTK ↔ tokio)
async-channel = "2"

# XDG / platform directories
dirs = "6"

# Shuffle randomness (zero-dependency PRNG)
fastrand = "2"

# Subsonic / Jellyfin / Plex API client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }

# URL percent-encoding (Plex auth form body)
urlencoding = "2"

# JSON value type (Jellyfin ImageTags parsing)
serde_json = "1"
md-5 = "0.10"

# mDNS service discovery (Subsonic/DAAP auto-detect)
mdns-sd = "0.12"

# DAAP/DMAP binary protocol parsing
nom = "8"

# Audio playback (GStreamer pipeline)
gstreamer = "0.25"

# Desktop media controls (MPRIS / SMTC / Now Playing)
souvlaki = "0.8"

# Windows-only: GDK4 Win32 backend (HWND extraction for souvlaki SMTC)
[target.'cfg(target_os = "windows")'.dependencies]
gdk4-win32 = "0.11"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[package.metadata.deb]
maintainer = "Tributary Contributors"
copyright = "2026, Tributary Contributors"
license-file = ["LICENSE", "0"]
depends = "libgtk-4-1 (>= 4.14), libadwaita-1-0 (>= 1.5), gstreamer1.0-plugins-good, gstreamer1.0-plugins-bad, gstreamer1.0-plugins-ugly, gstreamer1.0-libav, libdbus-1-3"
section = "sound"
assets = [
    ["target/release/tributary", "usr/bin/", "755"],
    ["data/io.github.tributary.Tributary.desktop", "usr/share/applications/", "644"],
    ["data/io.github.tributary.Tributary.metainfo.xml", "usr/share/metainfo/", "644"],
    ["data/icons/hicolor/16x16/apps/io.github.tributary.Tributary.png", "usr/share/icons/hicolor/16x16/apps/", "644"],
    ["data/icons/hicolor/24x24/apps/io.github.tributary.Tributary.png", "usr/share/icons/hicolor/24x24/apps/", "644"],
    ["data/icons/hicolor/32x32/apps/io.github.tributary.Tributary.png", "usr/share/icons/hicolor/32x32/apps/", "644"],
    ["data/icons/hicolor/48x48/apps/io.github.tributary.Tributary.png", "usr/share/icons/hicolor/48x48/apps/", "644"],
    ["data/icons/hicolor/64x64/apps/io.github.tributary.Tributary.png", "usr/share/icons/hicolor/64x64/apps/", "644"],
    ["data/icons/hicolor/128x128/apps/io.github.tributary.Tributary.png", "usr/share/icons/hicolor/128x128/apps/", "644"],
    ["data/icons/hicolor/256x256/apps/io.github.tributary.Tributary.png", "usr/share/icons/hicolor/256x256/apps/", "644"],
    ["data/icons/hicolor/512x512/apps/io.github.tributary.Tributary.png", "usr/share/icons/hicolor/512x512/apps/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/tributary", dest = "/usr/bin/tributary", mode = "0755" },
    { source = "data/io.github.tributary.Tributary.desktop", dest = "/usr/share/applications/io.github.tributary.Tributary.desktop", mode = "0644" },
    { source = "data/io.github.tributary.Tributary.metainfo.xml", dest = "/usr/share/metainfo/io.github.tributary.Tributary.metainfo.xml", mode = "0644" },
    { source = "data/icons/hicolor/16x16/apps/io.github.tributary.Tributary.png", dest = "/usr/share/icons/hicolor/16x16/apps/io.github.tributary.Tributary.png", mode = "0644" },
    { source = "data/icons/hicolor/24x24/apps/io.github.tributary.Tributary.png", dest = "/usr/share/icons/hicolor/24x24/apps/io.github.tributary.Tributary.png", mode = "0644" },
    { source = "data/icons/hicolor/32x32/apps/io.github.tributary.Tributary.png", dest = "/usr/share/icons/hicolor/32x32/apps/io.github.tributary.Tributary.png", mode = "0644" },
    { source = "data/icons/hicolor/48x48/apps/io.github.tributary.Tributary.png", dest = "/usr/share/icons/hicolor/48x48/apps/io.github.tributary.Tributary.png", mode = "0644" },
    { source = "data/icons/hicolor/64x64/apps/io.github.tributary.Tributary.png", dest = "/usr/share/icons/hicolor/64x64/apps/io.github.tributary.Tributary.png", mode = "0644" },
    { source = "data/icons/hicolor/128x128/apps/io.github.tributary.Tributary.png", dest = "/usr/share/icons/hicolor/128x128/apps/io.github.tributary.Tributary.png", mode = "0644" },
    { source = "data/icons/hicolor/256x256/apps/io.github.tributary.Tributary.png", dest = "/usr/share/icons/hicolor/256x256/apps/io.github.tributary.Tributary.png", mode = "0644" },
    { source = "data/icons/hicolor/512x512/apps/io.github.tributary.Tributary.png", dest = "/usr/share/icons/hicolor/512x512/apps/io.github.tributary.Tributary.png", mode = "0644" },
]

[package.metadata.generate-rpm.requires]
gtk4 = ">= 4.14"
libadwaita = ">= 1.5"
gstreamer1-plugins-good = "*"
gstreamer1-plugins-bad-free = "*"
gstreamer1-plugins-ugly-free = "*"
gstreamer1-libav = "*"
dbus = "*"

[dev-dependencies]
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
